fixed issue with non visible images

--- a/less/carousel.less
+++ b/less/carousel.less
@@ -18,6 +18,9 @@
       text-align: left; // need to keep this left and get the pagination centered
     }
 
+img.carousel-images{
+  max-height: @fixedHeight;
+}
 
     /* Prevent the slideshow from flashing on load */
     #carousel {
